2003-05-06  Keisuke Nishida  <knishida@netlab.jp>

	* exception.def (COB_EC_ALL): Added.
	* common.h (COB_SET_EXCEPTION): New macro.
	(cob_exception_table): New variable.
	(cob_exception_id): New enum.
	(cob_exception_code): Removed.

2003-05-04  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c: Optimized cob_add_int/cob_sub_int for DISPLAY.
	(digit_table): New variable.
	(init_digit_table): New function.
	(display_add_int, display_sub_int): New functions.
	(cob_add_int_to_display): New function.
	(cob_add_int): Call `cob_add_int_to_display'.
	(cob_sub_int): Call `cob_add_int'.
	(Thanks to David Korn <dgk@research.att.com>)

2003-05-04  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_get_sign, cob_put_sign): Redefined as macros.
	* common.c (cob_real_get_sign, cob_real_put_sign): Called from
	the above macros.

2003-05-03  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (COB_OPEN_NONE, COB_OPEN_LOCKED): New macros.
	(COB_CLOSE_REEL, COB_CLOSE_REEL_REMOVAL): Removed.
	(COB_FILE_CLOSED_WITH_LOCK): New macro.
	* fileio.c (sequential_close): Close with lock.
	(sequential_open): Seek to the end for extend file.
	(cob_open): Return COB_FILE_CLOSED_WITH_LOCK when file is locked.

2003-05-03  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_linage_counter): New variable.

2003-04-26  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_uint_attr, cob_sint_attr): Removed.
	(cob_ubin_attr, cob_sbin_attr): Removed.
	* move.c: Do not use them.

2003-04-03  Keisuke Nishida  <knishida@netlab.jp>

	* move.c (cob_get_int): Renamed from cob_to_int.

2003-03-30  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c (cob_decimal_set_int): Remove the 3rd argument `decimals'.
	(cob_decimal_set_int64): Removed.

2003-03-25  Keisuke Nishida  <knishida@netlab.jp>

	* exception.def: New file.

2003-03-06  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (cob_field_to_string): Search for ' ' from backward.
